# LearnOpenGL

./: CMakeLists.txt  test  test.cpp
src/: glad.c  glad.h  main.cpp
